--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <body>
   <app-root></app-root>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="/w-beta/runtime.d07f108c7e4524eb466b.js" defer></script><script src="/w-beta/polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="/w-beta/polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="/w-beta/scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="/w-beta/main.f791440ad5a6228032d3.js" defer></script></body>
+<script src="./w-beta/runtime.d07f108c7e4524eb466b.js" defer></script><script src="./w-beta/polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="./w-beta/polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="./w-beta/scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="./w-beta/main.f791440ad5a6228032d3.js" defer></script></body>
 </html>
