--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="/w-beta/styles.976f552c828de464fd1b.css"></head>
+<link rel="stylesheet" href="styles.976f552c828de464fd1b.css"></head>
 <body>
   <app-root></app-root>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="runtime.d07f108c7e4524eb466b.js" defer></script><script src="polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="main.f791440ad5a6228032d3.js" defer></script></body>
+<script src="runtime.0e49e2b53282f40c8925.js" defer></script><script src="polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="main.f791440ad5a6228032d3.js" defer></script></body>
 </html>
