--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <title>Brew Library Test Suite</title>
   <base href="./">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.976f552c828de464fd1b.css"></head>
+<link rel="stylesheet" href="styles.6d05c1346132ec8d873b.css"></head>
 <body>
   <app-root></app-root>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="runtime.0e49e2b53282f40c8925.js" defer></script><script src="polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="main.9cc9b63d2e88e7f08e17.js" defer></script></body>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+<script src="runtime.0e49e2b53282f40c8925.js" defer></script><script src="polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="main.44acf7014ec1beb75833.js" defer></script></body>
+<div cssdimensionstracker="true" style="position: fixed;top: 0px;width: 100%;height: 100vh;pointer-events: none;visibility: hidden;z-index: -1;"></div>
 </html>
