--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Brew Library Test Suite</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.d16e641c005b769d34ec.css"></head>
 <body>
   <app-root></app-root>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
-<script src="runtime.0e49e2b53282f40c8925.js" defer></script><script src="polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="main.0f835ee6e28a4b8661c0.js" defer></script></body>
+<script src="runtime.0e49e2b53282f40c8925.js" defer></script><script src="polyfills-es5.4594460d8c714bfa0e4e.js" nomodule defer></script><script src="polyfills.8d6a1a2a0fe851855db9.js" defer></script><script src="scripts.c4c155fcd63d2bd4d4c6.js" defer></script><script src="main.e7634091624fbbc9ad87.js" defer></script></body>
 <div cssdimensionstracker="true" style="position: fixed; top: 0px; width: 100%; height: 100vh; pointer-events: none; visibility: hidden; z-index: -1;"></div>
 <!--   <div cssdimensionstracker="true" class="dimension"></div> -->
 </html>
